fix contrast issues

--- a/css/landing.css
+++ b/css/landing.css
@@ -98,7 +98,7 @@ header #hero .explore {
     color: white;
     font-family: Roboto;
     font-size: 1.2rem;
-    font-weight: 300;
+    font-weight: 400;
     letter-spacing: .02em;
 }
 
@@ -110,7 +110,7 @@ header #hero .explore {
 
 #get-started .card-content p {
     font-size: 1rem;
-    color: rgba(0,0,0,0.54);
+    color: rgba(0,0,0,0.87);
     line-height: 1.7rem;
 }
 
@@ -157,7 +157,7 @@ header #hero .explore {
 }
 
 #breaking-news p {
-    color: rgba(255,255,255,0.7);
+    color: rgba(255,255,255,1);
     line-height: 1.7rem;
 }
 
@@ -179,7 +179,7 @@ header #hero .explore {
 #friends p {
     color: rgba(0,0,0,0.87);
     line-height: 1.7rem;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255,255,255,1);
 }
 
 #friends h2 {
